--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AvPrint - Finance",
+  "name": "AvPrint - Finance, Nodes and Reflection",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "./src/logos/website-icon.ico",
+      "sizes": "192x192",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./src/logos/website-logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./src/logos/website-logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
